basic config for an ipxe webserver to facilitate booting coreos images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 ---
 # docker-compose.yml
-flask-webserver:
+coreos-ipxeserver:
   build: .
   ports:
-    - 80
+    - "8085:80"
   environment:
     - MODE=dev
   volumes:
